--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.539.0",
     "material-ui-confirm": "^3.0.9",
     "moment": "^2.30.1",
     "react": "^18.2.0",
@@ -36,10 +37,13 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8.38.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
     "vite": "^4.3.2",
     "vite-plugin-svgr": "3.2.0"
   }
