--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "@mui/icons-material": "5.11.16",
     "@mui/lab": "^6.0.0-beta.26",
     "@mui/material": "5.13.0",
+    "@mui/x-date-pickers": "^8.10.0",
+    "@mui/x-date-pickers-pro": "^8.10.0",
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
+    "dayjs": "^1.11.13",
     "lodash": "^4.17.21",
     "lucide-react": "^0.539.0",
     "material-ui-confirm": "^3.0.9",
