--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-charts": "^5.2.1",
+    "react-grid-layout": "^1.5.2",
     "react-hook-form": "^7.54.2",
     "react-redux": "^9.2.0",
+    "react-resizable": "^3.0.5",
     "react-router-dom": "^6.28.1",
     "react-toastify": "^11.0.2",
     "redux": "^5.0.1",
